--- a/index.html
+++ b/index.html
@@ -7,26 +7,41 @@
         <title>Paper Scientifico</title>
     </head>
     <body>
-        <h1>Incremental and Decremental Support Vector Machine learning</h1>
-        <hr>
-        <p>
-            <strong>Autore</strong> <br>
-            città <br>
-            azienda <br>
-            indirizzo <br>
-            <em>email</em>
-        </p>
+       <!-- testata della pagina -->
+        <header>
+            <h1>Incremental and Decremental Support Vector Machine learning</h1>
+            <hr>
+            <section>
+                <h3>Autore</h3>
+                <p>
+                    città <br>
+                    azienda <br>
+                    indirizzo <br>
+                    <em>email</em>
+                </p>
+            </section>
+        </header>
+        <!-- testata della pagina  -->
 
-        <h2>Abstract</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dolores. Suscipit consectetur, rerum officiis tenetur vel neque laudantium doloribus, dolorum, sint doloremque facere fuga minus magnam veniam obcaecati quasi ipsam!</p>
-        <ol>
-            <li>
-                <strong>introduction</strong>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatibus tempore quae maiores impedit. Voluptatum, nam. Dolorem maxime placeat quidem laboriosam provident, voluptatum, laudantium veritatis neque dolor quo dolore voluptatibus?</p>
-                <img src="img/grafico.png" alt="Support Vector Machine learning">
-            </li>
-        </ol>
-        <a href="https://it.wikipedia.org/wiki/Vitolo_(calciatore_1989)" target="_blank">Go to wikipedia</a>
+        <!-- corpo della pagina -->
+        <main>
+            <h2>Abstract</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, dolores. Suscipit consectetur, rerum officiis tenetur vel neque laudantium doloribus, dolorum, sint doloremque facere fuga minus magnam veniam obcaecati quasi ipsam!</p>
+            <ol>
+                <li>
+                    <strong>introduction</strong>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptatibus tempore quae maiores impedit. Voluptatum, nam. Dolorem maxime placeat quidem laboriosam provident, voluptatum, laudantium veritatis neque dolor quo dolore voluptatibus?</p>
+                    <img src="img/grafico.png" alt="Support Vector Machine learning">
+                </li>
+            </ol>
+        </main>
+        <!-- corpo della pagina -->
+
         
+        <footer>
+            <a href="https://it.wikipedia.org/wiki/Vitolo_(calciatore_1989)" target="_blank">Go to wikipedia</a>
+        </footer>
+        
+
     </body>
 </html>
